// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HouseCard matches snapshot when clicked is false 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <HouseCard
    card={
        Object {
            "house": "greyjoy",
          }
    }
    clicked={false}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <div
        className="house-card"
>
        <h1>
                Name: 
        </h1>
        <h2 />
        <h3>
                Founded: 
                N/A
        </h3>
        <p>
                seats: 
        </p>
        <p>
                titles: 
        </p>
        <p>
                coat of arms: 
        </p>
        <p>
                ancestral weapons: 
        </p>
</div>,
      "replace": false,
      "to": Object {
        "pathname": "house/undefined",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1>
            Name: 
</h1>,
          <h2 />,
          <h3>
            Founded: 
            N/A
</h3>,
          <p>
            seats: 
</p>,
          <p>
            titles: 
</p>,
          <p>
            coat of arms: 
</p>,
          <p>
            ancestral weapons: 
</p>,
          false,
        ],
        "className": "house-card",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Name: ",
              undefined,
            ],
          },
          "ref": null,
          "rendered": Array [
            "Name: ",
            undefined,
          ],
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "",
          },
          "ref": null,
          "rendered": "",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Founded: ",
              "N/A",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Founded: ",
            "N/A",
          ],
          "type": "h3",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "seats: ",
              undefined,
            ],
          },
          "ref": null,
          "rendered": Array [
            "seats: ",
            undefined,
          ],
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "titles: ",
              undefined,
            ],
          },
          "ref": null,
          "rendered": Array [
            "titles: ",
            undefined,
          ],
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "coat of arms: ",
              undefined,
            ],
          },
          "ref": null,
          "rendered": Array [
            "coat of arms: ",
            undefined,
          ],
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "ancestral weapons: ",
              undefined,
            ],
          },
          "ref": null,
          "rendered": Array [
            "ancestral weapons: ",
            undefined,
          ],
          "type": "p",
        },
        false,
      ],
      "type": "div",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <div
          className="house-card"
>
          <h1>
                    Name: 
          </h1>
          <h2 />
          <h3>
                    Founded: 
                    N/A
          </h3>
          <p>
                    seats: 
          </p>
          <p>
                    titles: 
          </p>
          <p>
                    coat of arms: 
          </p>
          <p>
                    ancestral weapons: 
          </p>
</div>,
        "replace": false,
        "to": Object {
          "pathname": "house/undefined",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h1>
              Name: 
</h1>,
            <h2 />,
            <h3>
              Founded: 
              N/A
</h3>,
            <p>
              seats: 
</p>,
            <p>
              titles: 
</p>,
            <p>
              coat of arms: 
</p>,
            <p>
              ancestral weapons: 
</p>,
            false,
          ],
          "className": "house-card",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Name: ",
                undefined,
              ],
            },
            "ref": null,
            "rendered": Array [
              "Name: ",
              undefined,
            ],
            "type": "h1",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "",
            },
            "ref": null,
            "rendered": "",
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Founded: ",
                "N/A",
              ],
            },
            "ref": null,
            "rendered": Array [
              "Founded: ",
              "N/A",
            ],
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "seats: ",
                undefined,
              ],
            },
            "ref": null,
            "rendered": Array [
              "seats: ",
              undefined,
            ],
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "titles: ",
                undefined,
              ],
            },
            "ref": null,
            "rendered": Array [
              "titles: ",
              undefined,
            ],
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "coat of arms: ",
                undefined,
              ],
            },
            "ref": null,
            "rendered": Array [
              "coat of arms: ",
              undefined,
            ],
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "ancestral weapons: ",
                undefined,
              ],
            },
            "ref": null,
            "rendered": Array [
              "ancestral weapons: ",
              undefined,
            ],
            "type": "p",
          },
          false,
        ],
        "type": "div",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`HouseCard matches snapshot when clicked is true 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <HouseCard
    card={
        Object {
            "house": "greyjoy",
          }
    }
    clicked={true}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <div
        className="house-card"
>
        <h1>
                Name: 
        </h1>
        <h2 />
        <h3>
                Founded: 
                N/A
        </h3>
        <p>
                seats: 
        </p>
        <p>
                titles: 
        </p>
        <p>
                coat of arms: 
        </p>
        <p>
                ancestral weapons: 
        </p>
        <p>
                sworn members: 
        </p>
</div>,
      "replace": false,
      "to": Object {
        "pathname": "house/undefined",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1>
            Name: 
</h1>,
          <h2 />,
          <h3>
            Founded: 
            N/A
</h3>,
          <p>
            seats: 
</p>,
          <p>
            titles: 
</p>,
          <p>
            coat of arms: 
</p>,
          <p>
            ancestral weapons: 
</p>,
          <p>
            sworn members: 
</p>,
        ],
        "className": "house-card",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Name: ",
              undefined,
            ],
          },
          "ref": null,
          "rendered": Array [
            "Name: ",
            undefined,
          ],
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "",
          },
          "ref": null,
          "rendered": "",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Founded: ",
              "N/A",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Founded: ",
            "N/A",
          ],
          "type": "h3",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "seats: ",
              undefined,
            ],
          },
          "ref": null,
          "rendered": Array [
            "seats: ",
            undefined,
          ],
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "titles: ",
              undefined,
            ],
          },
          "ref": null,
          "rendered": Array [
            "titles: ",
            undefined,
          ],
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "coat of arms: ",
              undefined,
            ],
          },
          "ref": null,
          "rendered": Array [
            "coat of arms: ",
            undefined,
          ],
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "ancestral weapons: ",
              undefined,
            ],
          },
          "ref": null,
          "rendered": Array [
            "ancestral weapons: ",
            undefined,
          ],
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "sworn members: ",
              undefined,
            ],
          },
          "ref": null,
          "rendered": Array [
            "sworn members: ",
            undefined,
          ],
          "type": "p",
        },
      ],
      "type": "div",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <div
          className="house-card"
>
          <h1>
                    Name: 
          </h1>
          <h2 />
          <h3>
                    Founded: 
                    N/A
          </h3>
          <p>
                    seats: 
          </p>
          <p>
                    titles: 
          </p>
          <p>
                    coat of arms: 
          </p>
          <p>
                    ancestral weapons: 
          </p>
          <p>
                    sworn members: 
          </p>
</div>,
        "replace": false,
        "to": Object {
          "pathname": "house/undefined",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h1>
              Name: 
</h1>,
            <h2 />,
            <h3>
              Founded: 
              N/A
</h3>,
            <p>
              seats: 
</p>,
            <p>
              titles: 
</p>,
            <p>
              coat of arms: 
</p>,
            <p>
              ancestral weapons: 
</p>,
            <p>
              sworn members: 
</p>,
          ],
          "className": "house-card",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Name: ",
                undefined,
              ],
            },
            "ref": null,
            "rendered": Array [
              "Name: ",
              undefined,
            ],
            "type": "h1",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "",
            },
            "ref": null,
            "rendered": "",
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Founded: ",
                "N/A",
              ],
            },
            "ref": null,
            "rendered": Array [
              "Founded: ",
              "N/A",
            ],
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "seats: ",
                undefined,
              ],
            },
            "ref": null,
            "rendered": Array [
              "seats: ",
              undefined,
            ],
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "titles: ",
                undefined,
              ],
            },
            "ref": null,
            "rendered": Array [
              "titles: ",
              undefined,
            ],
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "coat of arms: ",
                undefined,
              ],
            },
            "ref": null,
            "rendered": Array [
              "coat of arms: ",
              undefined,
            ],
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "ancestral weapons: ",
                undefined,
              ],
            },
            "ref": null,
            "rendered": Array [
              "ancestral weapons: ",
              undefined,
            ],
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "sworn members: ",
                undefined,
              ],
            },
            "ref": null,
            "rendered": Array [
              "sworn members: ",
              undefined,
            ],
            "type": "p",
          },
        ],
        "type": "div",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
